<?xml version="1.0"?>
<package format="2">
  <name>agv_control_2021</name>
  <version>1.0.0</version>
  <description>AGV Control 2021 Metapackage</description>
  <maintainer email="msakamoto@nitnc.net">Mitsuhiro Sakamoto</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>agv_description</exec_depend>
  <exec_depend>agv_navigation</exec_depend>
  <exec_depend>agv_simulation</exec_depend>
  <export>
    <metapackage/>
  </export>
</package>
