<?xml version="1.0"?>
<package format="2">
  <name>agv_control_lib</name>
  <version>1.0.0</version>
  <description>Library for AGV Control 2021</description>
  <maintainer email="msakamoto@nitnc.net">Mitsuhiro Sakamoto</maintainer>
  <license>BSD</license>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>jsk_rviz_plugins</depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
