<?xml version="1.0"?>
<package format="2">
  <name>agv_simulation</name>
  <version>1.0.0</version>
  <description>AGV Simulation</description>
  <maintainer email="msakamoto@nitnc.net">Mitsuhiro Sakamoto</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>navigation</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>teb_local_planner</exec_depend>
  <exec_depend>agv_navigation</exec_depend>
  <exec_depend>agv_description</exec_depend>
  <exec_depend>towable_local_planner</exec_depend>
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
